samples/_failures_safe/1761506972_6fcaa4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9356f83.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_d9356f83.c:157:39: error: missing terminating " character
  157 |         case TOKEN_IDENTIFIER: return "IDENTIFIER
      |                                       ^~~~~~~~~~~
./samples/SAFE/__tmp_d9356f83.c:157:9: error: expected expression at end of input
  157 |         case TOKEN_IDENTIFIER: return "IDENTIFIER
      |         ^~~~
./samples/SAFE/__tmp_d9356f83.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9356f83.c:157:9: error: expected declaration or statement at end of input
